RESOLVED FIXED296820
REGRESSION(298121@main): [ iOS, macOS wk2 ] 4x imported/w3c/web-platform-tests/navigation-api/ (layout-tests) tests are constant text failures
https://bugs.webkit.org/show_bug.cgi?id=296820
Summary REGRESSION(298121@main): [ iOS, macOS wk2 ] 4x imported/w3c/web-platform-test...
Bryan Medina
Reported 2025-08-01 12:11:20 PDT
imported/w3c/web-platform-tests/navigation-api/navigate-event/navigation-traverseTo-in-iframe-same-document-preventDefault.html imported/w3c/web-platform-tests/navigation-api/navigation-methods/back-forward-multiple-frames.html imported/w3c/web-platform-tests/navigation-api/navigation-methods/traverseTo-navigates-multiple-iframes.html imported/w3c/web-platform-tests/navigation-api/per-entry-events/dispose-for-navigation-in-child.html are all flakey text failures on macOS wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2Fnavigation-traverseTo-in-iframe-same-document-preventDefault.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-methods%2Fback-forward-multiple-frames.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-methods%2FtraverseTo-navigates-multiple-iframes.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fper-entry-events%2Fdispose-for-navigation-in-child.html&platform=mac TEXT DIFF: FOR: imported/w3c/web-platform-tests/navigation-api/navigate-event/navigation-traverseTo-in-iframe-same-document-preventDefault.html --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigate-event/navigation-traverseTo-in-iframe-same-document-preventDefault-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigate-event/navigation-traverseTo-in-iframe-same-document-preventDefault-actual.txt @@ -1,4 +1,4 @@ -PASS navigation.traverseTo() in an iframe with same-document preventDefault in its parent +FAIL navigation.traverseTo() in an iframe with same-document preventDefault in its parent assert_unreached: navigate event should not fire in the iframe, because the traversal was cancelled in the top window Reached unreachable code FOR: imported/w3c/web-platform-tests/navigation-api/navigation-methods/back-forward-multiple-frames.html --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigation-methods/back-forward-multiple-frames-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigation-methods/back-forward-multiple-frames-actual.txt @@ -1,4 +1,4 @@ -PASS navigation.back() and navigation.forward() can navigate multiple frames +FAIL navigation.back() and navigation.forward() can navigate multiple frames assert_equals: after iframe second forward() outer index expected 1 but got 0 FOR: imported/w3c/web-platform-tests/navigation-api/navigation-methods/traverseTo-navigates-multiple-iframes.html --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigation-methods/traverseTo-navigates-multiple-iframes-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigation-methods/traverseTo-navigates-multiple-iframes-actual.txt @@ -1,4 +1,6 @@ -PASS entries() should be correct after a traversal that navigates multiple browsing contexts +Harness Error (TIMEOUT), message = null +TIMEOUT entries() should be correct after a traversal that navigates multiple browsing contexts Test timed out FOR: imported/w3c/web-platform-tests/navigation-api/per-entry-events/dispose-for-navigation-in-child.html --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/per-entry-events/dispose-for-navigation-in-child-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/per-entry-events/dispose-for-navigation-in-child-actual.txt @@ -1,6 +1,4 @@ -Harness Error (TIMEOUT), message = null +FAIL Dispose events should fire when entries are removed by a navigation in a different frame assert_equals: expected 0 but got 3 -TIMEOUT Dispose events should fire when entries are removed by a navigation in a different frame Test timed out TEXT DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/298130@main%20(3959)/results.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-01 12:11:42 PDT
Bryan Medina
Comment 2 2025-08-01 12:13:43 PDT
I was able to reproduce the text failure locally on my device running macOS Sequoia Release ToT using the following command: run-webkit-tests <test_name_here>
Bryan Medina
Comment 3 2025-08-01 12:30:28 PDT
Referring to the history, it is shown that the tests were failing somewhere between 298118@main and 2981121@main. Using reproduction steps above, I found that the tests were passing at 298120@main, but failed at 298121@main. At this time, I believe that the regression point is 298121@main.
EWS
Comment 4 2025-08-01 12:40:25 PDT
Test gardening commit 298139@main (18fb9119eaf8): <https://commits.webkit.org/298139@main> Reviewed commits have been landed. Closing PR #48841 and removing active labels.
Bryan Medina
Comment 5 2025-08-04 11:40:24 PDT
It seems that this test has now regressed for all configurations of iOS, also at 298121@main. Expectations will be set.
EWS
Comment 6 2025-08-04 11:47:07 PDT
Test gardening commit 298205@main (dd4977da2b13): <https://commits.webkit.org/298205@main> Reviewed commits have been landed. Closing PR #48911 and removing active labels.
rupin
Comment 7 2025-08-12 17:40:41 PDT
EWS
Comment 8 2025-08-12 23:46:58 PDT
Committed 298616@main (7ae0ae5ad9ee): <https://commits.webkit.org/298616@main> Reviewed commits have been landed. Closing PR #49299 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.