Cherry-pick 298616@main (7ae0ae5ad9ee). https://bugs.webkit.org/show_bug.cgi?id=296820

REGRESSION(298121@main): [ iOS, macOS wk2 ] 4x imported/w3c/web-platform-tests/navigation-api/ (layout-tests) tests are constant text failures
    https://bugs.webkit.org/show_bug.cgi?id=296820
    rdar://157317021

    Reviewed by Charlie Wolfe.

    298121@main contained two fixes. The second fix was changing
    Page::goToItemForNavigationAPI to be called with the triggering frame
    (sometimes an iframe) instead of always the main frame.

    This change is causing these four failures. It seems like given the
    design of the Navigation API, this change doesn't work. This API
    expects navigation.back() and navigation.forward() to be able to
    navigate over multiple frames, and check properties of those frames
    (such as preventDefault). So in order to correctly collect these frames,
    our recursive collection of frames must always begin at the main frame.

    This patch reverts this second fix from 298121@main.

    This does mean that the disambiguate* tests that 298121@main fixed will
    again be failing. But that fix broke more tests than it fixed, and seems
    wrong given the design of the Navigation API. We'll have to figure out
    some other fix for the disambiguate* tests.

    It's unusual that the bots didn't find these failures on 298121@main,
    the bots were totally green. I'm not sure why, but regardless, this
    patch should fix those tests.

    * LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/disambigaute-forward-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/disambigaute-traverseTo-forward-multiple-expected.txt:
    * LayoutTests/platform/glib/TestExpectations:
    * LayoutTests/platform/ios/TestExpectations:
    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/loader/HistoryController.cpp:
    (WebCore::HistoryController::goToItemForNavigationAPI):
    * Source/WebCore/loader/NavigationScheduler.cpp:
    (WebCore::ScheduledHistoryNavigationByKey::findBackForwardItemByKey):

    Canonical link: https://commits.webkit.org/298616@main

Canonical link: https://commits.webkit.org/298234.17@webkitglib/2.50